<resources>
    <string name="app_name">Biirr</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smooth">Smooth</string>
    <string name="bitter">Bitter</string>
    <string name="hipster_plus">Hipster Plus</string>
    <string name="name">Name:</string>
    <string name="tagline">Tagline:</string>
    <string name="abv">Abv:</string>
    <string name="ibu">Ibu:</string>
    <string name="food_pairing">Food pairing</string>
</resources>