<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.details.BeerDetailsFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nameLabel"
                android:layout_width="0dp"
                style="@style/LabelStyle"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/nameLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/taglineLabel"
                style="@style/LabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tagline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/taglineLabel"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/abvLabel"
                android:layout_width="0dp"
                style="@style/LabelStyle"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/abv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tagline" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/abv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/abvLabel"
                app:layout_constraintTop_toBottomOf="@id/tagline" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ibuLabel"
                android:layout_width="0dp"
                style="@style/LabelStyle"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ibu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/abv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ibu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ibuLabel"
                app:layout_constraintTop_toBottomOf="@id/abv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodPairingLabel"
                android:layout_width="0dp"
                style="@style/LabelStyle"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/food_pairing"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ibu" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodPairing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/foodPairingLabel"
                app:layout_constraintTop_toBottomOf="@id/foodPairingLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
